[package]
name = "nyeda_shared"
version = "0.1.0"
edition = "2021"
authors = ["Soumyo Deep Gupta <deep@d33p0st.in>"]

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.0"

[dependencies]
bincode = "1.3.3"
flate2 = "1.0.35"
mac_address = "1.1.8"
md5 = "0.7.0"
nix = "0.29.0"
pyo3 = { version = "0.22.2", features = ["extension-module"] }
rand = "0.9.0"
rustypath = { version = "1.2.1", features = ["pyo3-bindings"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sysinfo = "0.33.1"
tar = "0.4.43"
uuid = { version = "1.13.1", features = ["v4"] }
whoami = "1.5.2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = { version = "0.55.0", optional = true }